# txt_spider

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg
txt_spider/: items.py  middlewares.py  pipelines.py  settings.py
txt_spider/spiders/: coinmarketcap.py  singaporepool.py
